[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/AirDungeon.gd" type="Script" id=2]
[ext_resource path="res://Objects/BasicDoor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Chest.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Sign.tscn" type="PackedScene" id=5]
[ext_resource path="res://NPC/NPCSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/WideDoor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/LevelPortal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Items/AirAmulet.tscn" type="PackedScene" id=9]

[node name="AirDungeon" instance=ExtResource( 1 )]
script = ExtResource( 2 )
LEVEL_ID = "air_dungeon"

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -2228226, 0, 1, -2228225, 0, 1, -2293760, 0, 1, -2293759, 0, 1, -2293758, 0, 1, -2293754, 0, 1, -2293753, 0, 1, -2293752, 0, 1, -2293751, 0, 1, -2293750, 0, 1, -2293749, 0, 1, -2228213, 0, 1, -2228212, 0, 1, -2228211, 0, 1, -2228210, 0, 1, -2097159, 0, 1, -2097158, 0, 1, -2097157, 0, 1, -2162688, 0, 0, -2162680, 0, 0, -2031623, 0, 1, -1966089, 0, 1, -1966088, 0, 1, -1966087, 0, 1, -2031602, 0, 0, -1900553, 0, 1, -1966066, 0, 1, -1900539, 0, 0, -1900532, 0, 1, -1900530, 0, 1, -1769478, 0, 0, -1769474, 0, 1, -1769473, 0, 1, -1834997, 0, 1, -1834996, 0, 1, -1834995, 0, 1, -1834994, 0, 1, -1703946, 0, 1, -1703940, 0, 1, -1703939, 0, 1, -1703938, 0, 1, -1703937, 0, 1, -1769464, 0, 0, -1769461, 0, 1, -1769460, 0, 1, -1769459, 0, 1, -1769458, 0, 1, -1638410, 0, 1, -1638404, 0, 1, -1638403, 0, 1, -1638402, 0, 1, -1703924, 0, 1, -1572874, 0, 1, -1638388, 0, 1, -1638387, 0, 1, -1507338, 0, 1, -1507337, 0, 1, -1507336, 0, 1, -1572850, 0, 1, -1441800, 0, 1, -1310724, 4, 0, -1310723, 4, 0, -1310722, 4, 0, -1310721, 4, 0, -1376256, 4, 0, -1376253, 0, 0, -1376248, 4, 0, -1376247, 4, 0, -1376246, 4, 0, -1376245, 4, 0, -1376244, 4, 0, -1376243, 4, 0, -1245188, 4, 0, -1245187, 4, 0, -1245186, 4, 0, -1245185, 4, 0, -1310720, 4, 0, -1310712, 4, 0, -1310711, 4, 0, -1310710, 4, 0, -1310709, 4, 0, -1310708, 4, 0, -1310707, 4, 0, -1179652, 4, 0, -1179651, 4, 0, -1179650, 4, 0, -1179649, 4, 0, -1245184, 4, 0, -1245176, 4, 0, -1245175, 4, 0, -1245174, 4, 0, -1245173, 4, 0, -1245172, 4, 0, -1245171, 4, 0, -1179648, 1, 65537, -1179640, 1, 65537, -1179636, 4, 0, -1179635, 4, 0, -1048580, 4, 0, -1048579, 4, 0, -1048578, 4, 0, -1048577, 4, 0, -1114112, 4, 0, -1114111, 4, 0, -1114110, 4, 0, -1114109, 4, 0, -1114108, 4, 0, -1114107, 4, 0, -1114106, 4, 0, -1114105, 4, 0, -1114104, 4, 0, -1114103, 4, 0, -1114102, 4, 0, -1114101, 4, 0, -1114100, 4, 0, -1114099, 4, 0, -983044, 4, 0, -983043, 4, 0, -983042, 4, 0, -983041, 4, 0, -1048576, 4, 0, -1048575, 4, 0, -1048574, 4, 0, -1048573, 4, 0, -1048572, 4, 0, -1048571, 4, 0, -1048570, 4, 0, -1048569, 4, 0, -1048568, 4, 0, -1048567, 4, 0, -1048566, 4, 0, -1048565, 4, 0, -1048564, 1, 65537, -917508, 4, 0, -917507, 4, 0, -917506, 4, 0, -917505, 4, 0, -983040, 4, 0, -983039, 4, 0, -983038, 4, 0, -983037, 4, 0, -983036, 4, 0, -983035, 4, 0, -983034, 4, 0, -983033, 4, 0, -983032, 4, 0, -983031, 4, 0, -983030, 4, 0, -983029, 4, 0, -851972, 4, 0, -851971, 4, 0, -851970, 4, 0, -851969, 4, 0, -917504, 4, 0, -917503, 4, 0, -917502, 4, 0, -917501, 4, 0, -917500, 4, 0, -917499, 4, 0, -917498, 4, 0, -917497, 4, 0, -917496, 4, 0, -917495, 4, 0, -917494, 4, 0, -917493, 4, 0, -786436, 4, 0, -786435, 4, 0, -786434, 4, 0, -786433, 4, 0, -851968, 4, 0, -851967, 4, 0, -851966, 4, 0, -851965, 4, 0, -851964, 4, 0, -851963, 4, 0, -851962, 4, 0, -851961, 4, 0, -851960, 4, 0, -851959, 4, 0, -851958, 4, 0, -851957, 4, 0, -720900, 4, 0, -720899, 4, 0, -720898, 4, 0, -720897, 4, 0, -786432, 4, 0, -786431, 4, 0, -786430, 4, 0, -786429, 4, 0, -786428, 4, 0, -786427, 4, 0, -786426, 4, 0, -786425, 4, 0, -786424, 4, 0, -786423, 4, 0, -786422, 4, 0, -786421, 4, 0, -720892, 4, 0, -720891, 4, 0, -589828, 4, 0, -589827, 4, 0, -589826, 4, 0, -589825, 4, 0, -655360, 4, 0, -655359, 4, 0, -655358, 4, 0, -655357, 4, 0, -655356, 4, 0, -655355, 4, 0, -655354, 4, 0, -655353, 4, 0, -655352, 4, 0, -655351, 4, 0, -655350, 4, 0, -655349, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -589822, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -589818, 4, 0, -589817, 4, 0, -589816, 4, 0, -589815, 4, 0, -589814, 4, 0, -589813, 4, 0, -458756, 4, 0, -458755, 4, 0, -458754, 4, 0, -458753, 4, 0, -524288, 4, 0, -524287, 4, 0, -524286, 4, 0, -524285, 4, 0, -524284, 4, 0, -524283, 4, 0, -524282, 4, 0, -524281, 4, 0, -524280, 4, 0, -524279, 4, 0, -524278, 4, 0, -524277, 4, 0, -393220, 1, 65537, -393218, 4, 0, -393217, 4, 0, -458752, 4, 0, -458751, 4, 0, -458750, 4, 0, -458749, 4, 0, -458748, 4, 0, -458747, 4, 0, -458746, 4, 0, -458745, 4, 0, -458744, 4, 0, -458743, 4, 0, -458742, 4, 0, -458741, 4, 0, -327690, 4, 0, -327689, 4, 0, -327688, 4, 0, -327687, 4, 0, -327686, 4, 0, -327685, 4, 0, -327684, 4, 0, -327683, 4, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -393210, 4, 0, -393209, 4, 0, -393208, 4, 0, -393207, 4, 0, -393206, 4, 0, -393205, 4, 0, -262154, 4, 0, -262153, 4, 0, -262152, 4, 0, -262151, 4, 0, -262150, 4, 0, -262149, 4, 0, -262148, 4, 0, -262147, 4, 0, -262146, 4, 0, -262145, 4, 0, -327680, 4, 0, -327679, 4, 0, -327678, 4, 0, -327677, 4, 0, -327676, 4, 0, -327675, 4, 0, -327674, 4, 0, -327673, 4, 0, -327672, 4, 0, -327671, 4, 0, -327670, 4, 0, -327669, 4, 0, -196618, 4, 0, -196617, 4, 0, -196616, 4, 0, -196615, 4, 0, -196614, 4, 0, -196613, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -262144, 4, 0, -262143, 4, 0, -262142, 4, 0, -262141, 4, 0, -262140, 4, 0, -262139, 4, 0, -262138, 4, 0, -262137, 4, 0, -262136, 4, 0, -262135, 4, 0, -262134, 4, 0, -262133, 4, 0, -131082, 4, 0, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -65551, 0, 1, -65550, 0, 1, -65548, 0, 1, -65547, 0, 1, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -15, 0, 1, -13, 0, 0, -10, 4, 0, -9, 4, 0, -8, 4, 0, -7, 4, 0, -6, 4, 0, -5, 4, 0, -4, 4, 0, -3, 4, 0, -2, 4, 0, -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, 131070, 0, 1, 131071, 0, 1, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 196595, 0, 0, 196607, 0, 1, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 262129, 0, 1, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 327665, 0, 1, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 393201, 0, 1, 393202, 0, 1, 458738, 0, 1, 458742, 0, 1, 458743, 0, 1, 458751, 0, 1, 524277, 0, 1, 524278, 0, 1, 524279, 0, 1, 524286, 0, 1, 524287, 0, 1, 589813, 0, 1, 589814, 0, 1, 589815, 0, 1, 589820, 0, 0, 589822, 0, 1 )

[node name="YSortTileMap" parent="." index="1"]
tile_data = PoolIntArray( -2818048, 1, 0, -2818047, 1, 0, -2818046, 1, 0, -2818045, 1, 0, -2818044, 1, 0, -2818043, 1, 0, -2818042, 1, 0, -2818041, 1, 0, -2818040, 1, 0, -2686977, 1, 0, -2752512, 1, 0, -2752511, 1, 0, -2752510, 1, 0, -2752509, 1, 0, -2752508, 1, 0, -2752507, 1, 0, -2752506, 1, 0, -2752505, 1, 0, -2752504, 1, 0, -2752503, 1, 0, -2621442, 1, 0, -2621441, 1, 0, -2686976, 1, 0, -2686975, 1, 0, -2686974, 1, 0, -2686973, 1, 0, -2686972, 1, 0, -2686971, 1, 0, -2686970, 1, 0, -2686969, 1, 0, -2686968, 1, 0, -2686967, 1, 0, -2686966, 1, 0, -2555908, 1, 0, -2555907, 1, 0, -2555906, 1, 0, -2555905, 1, 0, -2621440, 1, 0, -2621439, 1, 0, -2621434, 1, 0, -2621433, 1, 0, -2621432, 1, 0, -2621431, 1, 0, -2621430, 1, 0, -2621429, 1, 0, -2621428, 1, 0, -2621427, 1, 0, -2621426, 1, 0, -2490373, 1, 0, -2490372, 1, 0, -2490371, 1, 0, -2490370, 1, 0, -2490369, 1, 0, -2555904, 1, 0, -2555903, 1, 0, -2555898, 1, 0, -2555897, 1, 0, -2555896, 1, 0, -2555895, 1, 0, -2555894, 1, 0, -2555893, 1, 0, -2555892, 1, 0, -2555891, 1, 0, -2555890, 1, 0, -2555889, 1, 0, -2555888, 1, 0, -2555887, 1, 0, -2424838, 1, 0, -2424837, 1, 0, -2424836, 1, 0, -2424835, 1, 0, -2424834, 1, 0, -2424833, 1, 0, -2490368, 1, 0, -2490367, 1, 0, -2490362, 1, 0, -2490361, 1, 0, -2490360, 1, 0, -2490359, 1, 0, -2490358, 1, 0, -2490357, 1, 0, -2490356, 1, 0, -2490355, 1, 0, -2490354, 1, 0, -2490353, 1, 0, -2490352, 1, 0, -2490351, 1, 0, -2490350, 1, 0, -2359304, 1, 0, -2359303, 1, 0, -2359302, 1, 0, -2359301, 1, 0, -2359300, 1, 0, -2359299, 1, 0, -2359298, 1, 0, -2359297, 1, 0, -2424832, 1, 0, -2424831, 1, 0, -2424826, 1, 0, -2424825, 1, 0, -2424824, 1, 0, -2424823, 1, 0, -2424822, 1, 0, -2424821, 1, 0, -2424820, 1, 0, -2424819, 1, 0, -2424818, 1, 0, -2424817, 1, 0, -2424816, 1, 0, -2424815, 1, 0, -2424814, 1, 0, -2424813, 1, 0, -2293770, 1, 0, -2293769, 1, 0, -2293768, 1, 0, -2293767, 1, 0, -2293766, 1, 0, -2293765, 1, 0, -2293764, 1, 0, -2293763, 1, 0, -2293762, 1, 0, -2293761, 1, 0, -2359296, 1, 0, -2359295, 1, 0, -2359294, 0, 1, -2359293, 0, 1, -2359291, 0, 1, -2359290, 1, 0, -2359289, 1, 0, -2359288, 1, 0, -2359287, 1, 0, -2359286, 1, 0, -2359285, 1, 0, -2359284, 1, 0, -2359283, 1, 0, -2359282, 1, 0, -2359281, 1, 0, -2359280, 1, 0, -2359279, 1, 0, -2359278, 1, 0, -2359277, 1, 0, -2359276, 1, 0, -2228236, 1, 0, -2228235, 1, 0, -2228234, 1, 0, -2228233, 1, 0, -2228232, 1, 0, -2228231, 1, 0, -2228230, 1, 0, -2228229, 1, 0, -2228228, 1, 0, -2293748, 1, 0, -2293747, 1, 0, -2293746, 1, 0, -2293745, 1, 0, -2293744, 1, 0, -2293743, 1, 0, -2293742, 1, 0, -2293741, 1, 0, -2293740, 1, 0, -2293739, 1, 0, -2162701, 1, 0, -2162700, 1, 0, -2162699, 1, 0, -2162698, 1, 0, -2162697, 1, 0, -2162696, 1, 0, -2162695, 1, 0, -2162694, 1, 0, -2228209, 1, 0, -2228208, 1, 0, -2228207, 1, 0, -2228206, 1, 0, -2228205, 1, 0, -2228204, 1, 0, -2228203, 1, 0, -2097165, 1, 0, -2097164, 1, 0, -2097163, 1, 0, -2097162, 1, 0, -2097161, 1, 0, -2097160, 1, 0, -2162673, 1, 0, -2162672, 1, 0, -2162671, 1, 0, -2162670, 1, 0, -2162669, 1, 0, -2162668, 1, 0, -2162667, 1, 0, -2031629, 1, 0, -2031628, 1, 0, -2031627, 1, 0, -2031626, 1, 0, -2031625, 1, 0, -2031624, 1, 0, -2097137, 1, 0, -2097136, 1, 0, -2097135, 1, 0, -2097134, 1, 0, -2097133, 1, 0, -2097132, 1, 0, -2097131, 1, 0, -1966094, 1, 0, -1966093, 1, 0, -1966092, 1, 0, -1966091, 1, 0, -1966090, 1, 0, -2031601, 1, 0, -2031600, 1, 0, -2031599, 1, 0, -2031598, 1, 0, -2031597, 1, 0, -2031596, 1, 0, -2031595, 1, 0, -1900558, 1, 0, -1900557, 1, 0, -1900556, 1, 0, -1900555, 1, 0, -1966065, 1, 0, -1966064, 1, 0, -1966063, 1, 0, -1966062, 1, 0, -1966061, 1, 0, -1966060, 1, 0, -1966059, 1, 0, -1835022, 1, 0, -1835021, 1, 0, -1835020, 1, 0, -1835019, 1, 0, -1900529, 1, 0, -1900528, 1, 0, -1900527, 1, 0, -1900526, 1, 0, -1900525, 1, 0, -1900524, 1, 0, -1900523, 1, 0, -1769487, 1, 0, -1769486, 1, 0, -1769485, 1, 0, -1769484, 1, 0, -1769483, 1, 0, -1834993, 1, 0, -1834992, 1, 0, -1834991, 1, 0, -1834990, 1, 0, -1834989, 1, 0, -1834988, 1, 0, -1834987, 1, 0, -1703951, 1, 0, -1703950, 1, 0, -1703949, 1, 0, -1703948, 1, 0, -1703947, 1, 0, -1769457, 1, 0, -1769456, 1, 0, -1769455, 1, 0, -1769454, 1, 0, -1769453, 1, 0, -1769452, 1, 0, -1769451, 1, 0, -1638415, 1, 0, -1638414, 1, 0, -1638413, 1, 0, -1638412, 1, 0, -1638411, 1, 0, -1703921, 1, 0, -1703920, 1, 0, -1703919, 1, 0, -1703918, 1, 0, -1703917, 1, 0, -1703916, 1, 0, -1703915, 1, 0, -1572879, 1, 0, -1572878, 1, 0, -1572877, 1, 0, -1572876, 1, 0, -1572875, 1, 0, -1638385, 1, 0, -1638384, 1, 0, -1638383, 1, 0, -1638382, 1, 0, -1638381, 1, 0, -1638380, 1, 0, -1638379, 1, 0, -1507343, 1, 0, -1507342, 1, 0, -1507341, 1, 0, -1507340, 1, 0, -1507339, 1, 0, -1572849, 1, 0, -1572848, 1, 0, -1572847, 1, 0, -1572846, 1, 0, -1572845, 1, 0, -1572844, 1, 0, -1572843, 1, 0, -1441807, 1, 0, -1441806, 1, 0, -1441805, 1, 0, -1441804, 1, 0, -1441803, 1, 0, -1441802, 1, 0, -1441801, 1, 0, -1507314, 1, 0, -1507313, 1, 0, -1507312, 1, 0, -1507311, 1, 0, -1507310, 1, 0, -1507309, 1, 0, -1507308, 1, 0, -1376271, 1, 0, -1376270, 1, 0, -1376269, 1, 0, -1376268, 1, 0, -1376267, 1, 0, -1376266, 1, 0, -1376265, 1, 0, -1376264, 1, 0, -1376263, 1, 0, -1376262, 1, 0, -1376261, 1, 0, -1376260, 0, 0, -1376259, 0, 1, -1376258, 0, 1, -1376257, 0, 1, -1441792, 0, 1, -1441791, 0, 196611, -1441785, 0, 196610, -1441784, 0, 1, -1441783, 0, 1, -1441782, 0, 1, -1441781, 0, 1, -1441780, 0, 1, -1441779, 0, 3, -1441778, 1, 0, -1441777, 1, 0, -1441776, 1, 0, -1441775, 1, 0, -1441774, 1, 0, -1441773, 1, 0, -1310735, 1, 0, -1310734, 1, 0, -1310733, 1, 0, -1310732, 1, 0, -1310731, 1, 0, -1310730, 1, 0, -1310729, 1, 0, -1310728, 1, 0, -1310727, 1, 0, -1310726, 1, 0, -1310725, 1, 0, -1310724, 0, 65536, -1376255, 0, 65536, -1376249, 0, 65539, -1376243, 0, 65539, -1376242, 1, 0, -1376241, 1, 0, -1376240, 1, 0, -1376239, 1, 0, -1376238, 1, 0, -1376237, 1, 0, -1245199, 1, 0, -1245198, 1, 0, -1245197, 1, 0, -1245196, 1, 0, -1245195, 1, 0, -1245194, 1, 0, -1245193, 1, 0, -1245192, 1, 0, -1245191, 1, 0, -1245190, 1, 0, -1245189, 1, 0, -1245188, 0, 65536, -1310719, 0, 65536, -1310713, 0, 65539, -1310707, 0, 65539, -1310706, 1, 0, -1310705, 1, 0, -1310704, 1, 0, -1310703, 1, 0, -1310702, 1, 0, -1179663, 1, 0, -1179662, 1, 0, -1179661, 1, 0, -1179660, 1, 0, -1179659, 1, 0, -1179658, 1, 0, -1179657, 1, 0, -1179656, 1, 0, -1179655, 1, 0, -1179654, 1, 0, -1179653, 1, 0, -1179652, 0, 65536, -1245183, 0, 65536, -1245177, 0, 65539, -1245171, 0, 65539, -1245170, 1, 0, -1245169, 1, 0, -1245168, 1, 0, -1245167, 1, 0, -1114127, 1, 0, -1114126, 1, 0, -1114125, 1, 0, -1114124, 1, 0, -1114123, 1, 0, -1114122, 1, 0, -1114121, 1, 0, -1114120, 1, 0, -1114119, 1, 0, -1114118, 1, 0, -1114117, 1, 0, -1114116, 0, 327680, -1114115, 0, 1, -1114114, 0, 1, -1179648, 0, 1, -1179647, 0, 1, -1179646, 0, 1, -1179644, 0, 1, -1179643, 0, 1, -1179642, 0, 1, -1179641, 0, 1, -1179640, 0, 1, -1179638, 0, 1, -1179637, 0, 3, -1179635, 0, 65539, -1179634, 1, 0, -1179633, 1, 0, -1048589, 1, 0, -1048588, 1, 0, -1048587, 1, 0, -1048586, 1, 0, -1048585, 1, 0, -1048584, 1, 0, -1048583, 1, 0, -1048582, 1, 0, -1048580, 0, 65536, -1114101, 0, 65539, -1114099, 0, 65539, -983044, 0, 65536, -1048565, 0, 65539, -1048564, 0, 1, -1048563, 0, 131075, -917508, 0, 65536, -983029, 0, 65539, -851972, 0, 65536, -917493, 0, 65539, -786436, 0, 65536, -851957, 0, 65539, -720900, 0, 65536, -786421, 0, 65539, -655364, 0, 327680, -655363, 0, 1, -655362, 0, 1, -655361, 0, 1, -720896, 0, 1, -720895, 0, 1, -720894, 0, 1, -720893, 0, 1, -720890, 0, 1, -720889, 0, 1, -720888, 0, 1, -720887, 0, 1, -720886, 0, 1, -720885, 0, 327681, -589828, 0, 65536, -655349, 0, 65539, -524292, 0, 65536, -589813, 0, 65539, -458756, 0, 65536, -524277, 0, 65539, -393226, 0, 0, -393225, 0, 1, -393224, 0, 1, -393223, 0, 1, -393222, 0, 1, -393221, 0, 1, -393220, 0, 1, -393219, 0, 1, -393218, 0, 3, -458741, 0, 65539, -327690, 0, 65536, -327682, 0, 65539, -393205, 0, 65539, -262154, 0, 65536, -262146, 0, 65539, -327669, 0, 65539, -196625, 1, 0, -196624, 1, 0, -196623, 1, 0, -196622, 1, 0, -196621, 1, 0, -196620, 1, 0, -196619, 1, 0, -196618, 0, 65536, -196610, 0, 65539, -262133, 0, 65539, -131089, 1, 0, -131088, 1, 0, -131087, 1, 0, -131086, 1, 0, -131085, 1, 0, -131084, 1, 0, -131083, 1, 0, -131082, 0, 65536, -131074, 0, 65539, -196597, 0, 65539, -65553, 1, 0, -65552, 1, 0, -65546, 0, 327680, -65545, 0, 1, -65544, 0, 1, -65543, 0, 131074, -65542, 0, 1, -65541, 0, 1, -65540, 0, 1, -65539, 0, 1, -65538, 0, 131075, -131061, 0, 65539, -17, 1, 0, -16, 1, 0, -10, 0, 65536, -65529, 0, 196610, -65528, 0, 262146, -65527, 0, 262146, -65526, 0, 262146, -65525, 0, 327683, 65519, 1, 0, 65520, 1, 0, 65526, 0, 327682, 65528, 0, 262146, 65529, 0, 262146, 65530, 0, 262146, 65531, 0, 262146, 65532, 0, 262146, 65533, 0, 262146, 65534, 0, 262146, 65535, 0, 262146, 0, 0, 262144, 1, 0, 1, 2, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 327681, 131055, 1, 0, 131056, 1, 0, 65536, 0, 65536, 65543, 0, 65539, 196591, 1, 0, 196592, 1, 0, 131072, 0, 65536, 131079, 0, 65539, 262127, 1, 0, 262128, 1, 0, 196608, 0, 65536, 196615, 0, 65539, 327663, 1, 0, 327664, 1, 0, 262144, 0, 65536, 262151, 0, 65539, 393199, 1, 0, 393200, 1, 0, 327680, 0, 327682, 327681, 0, 262146, 327682, 0, 262146, 327683, 0, 262146, 327684, 0, 262146, 327685, 0, 262146, 327686, 0, 262146, 327687, 0, 327683, 458735, 1, 0, 458736, 1, 0, 458737, 1, 0, 393216, 1, 0, 393217, 1, 0, 524271, 1, 0, 524272, 1, 0, 524273, 1, 0, 524274, 1, 0, 458752, 1, 0, 458753, 1, 0, 589807, 1, 0, 589808, 1, 0, 589809, 1, 0, 589810, 1, 0, 589811, 1, 0, 589812, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 655344, 1, 0, 655345, 1, 0, 655346, 1, 0, 655347, 1, 0, 655348, 1, 0, 655349, 1, 0, 655350, 1, 0, 655358, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 720882, 1, 0, 720883, 1, 0, 720884, 1, 0, 720885, 1, 0, 720886, 1, 0, 720887, 1, 0, 720888, 1, 0, 720893, 1, 0, 720894, 1, 0, 720895, 1, 0, 655360, 1, 0, 786419, 1, 0, 786420, 1, 0, 786421, 1, 0, 786422, 1, 0, 786423, 1, 0, 786424, 1, 0, 786425, 1, 0, 786426, 1, 0, 786427, 1, 0, 786428, 1, 0, 786429, 1, 0, 786430, 1, 0, 786431, 1, 0, 851957, 1, 0, 851958, 1, 0, 851959, 1, 0, 851960, 1, 0, 851961, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 917495, 1, 0, 917496, 1, 0, 917497, 1, 0, 917498, 1, 0, 917499, 1, 0, 917500, 1, 0, 917501, 1, 0 )

[node name="FirstDoor" parent="YSortTileMap" index="0" instance=ExtResource( 7 )]
position = Vector2( 40, -84 )
LOCKED_MESSAGE = "Defeat the monsters to unlock this door"
UNLOCK_WITH_KEY = false

[node name="SecondDoor" parent="YSortTileMap" index="1" instance=ExtResource( 3 )]
position = Vector2( 28, -140 )
LOCKED_MESSAGE = "Defeat the monsters to unlock the door"
UNLOCK_WITH_KEY = false

[node name="FinalDoor" parent="YSortTileMap" index="2" instance=ExtResource( 3 )]
position = Vector2( 36, -284 )
LOCKED_MESSAGE = "Defeat the monsters to unlock the door"
UNLOCK_WITH_KEY = false

[node name="BasicDoor" parent="YSortTileMap" index="3" instance=ExtResource( 3 )]
position = Vector2( 28, 4 )
STARTING_STATE = 1

[node name="BasicDoor2" parent="YSortTileMap" index="4" instance=ExtResource( 3 )]
position = Vector2( -4, -140 )
STARTING_STATE = 1

[node name="BasicDoor4" parent="YSortTileMap" index="5" instance=ExtResource( 3 )]
position = Vector2( 76, -140 )
STARTING_STATE = 1

[node name="Chest" parent="YSortTileMap" index="6" instance=ExtResource( 4 )]
position = Vector2( 52, 22 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Chest5" parent="YSortTileMap" index="7" instance=ExtResource( 4 )]
position = Vector2( 88, -153 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Chest6" parent="YSortTileMap" index="8" instance=ExtResource( 4 )]
position = Vector2( -11, -153 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Chest3" parent="YSortTileMap" index="9" instance=ExtResource( 4 )]
position = Vector2( -20, -33 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Chest2" parent="YSortTileMap" index="10" instance=ExtResource( 4 )]
position = Vector2( 43, 22 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Chest4" parent="YSortTileMap" index="11" instance=ExtResource( 4 )]
position = Vector2( -31, -33 )
STARTING_STATE = 1
RANDOM_CHEST = true
IGNORE_SAVE = true

[node name="Sign" parent="YSortTileMap" index="12" instance=ExtResource( 5 )]
position = Vector2( 20, 11 )
message = "Your battle for the air amulet begins beyond this door."

[node name="GhostSpawner" parent="YSortTileMap" index="13" instance=ExtResource( 6 )]
position = Vector2( -57, -34 )
SPAWN_NPC = "res://Enemies/Ghost.tscn"
MIN_QUANTITY = 2
MAX_QUANTITY = 2
RESPAWN_ONCE_DEAD = false

[node name="GhostSpawner2" parent="YSortTileMap" index="14" instance=ExtResource( 6 )]
position = Vector2( 19, -47 )
SPAWN_NPC = "res://Enemies/Ghost.tscn"
MIN_QUANTITY = 4
MAX_QUANTITY = 4
RESPAWN_ONCE_DEAD = false

[node name="GhostSpawner3" parent="YSortTileMap" index="15" instance=ExtResource( 6 )]
position = Vector2( 61, -47 )
SPAWN_NPC = "res://Enemies/Ghost.tscn"
MIN_QUANTITY = 4
MAX_QUANTITY = 4
RESPAWN_ONCE_DEAD = false

[node name="GhostSpawner4" parent="YSortTileMap" index="16" instance=ExtResource( 6 )]
position = Vector2( 33, -118 )
SPAWN_NPC = "res://Enemies/Ghost.tscn"
MIN_QUANTITY = 4
MAX_QUANTITY = 4
RESPAWN_ONCE_DEAD = false

[node name="CrabSpawner" parent="YSortTileMap" index="17" instance=ExtResource( 6 )]
position = Vector2( 69, -118 )
SPAWN_NPC = "res://Enemies/Crab.tscn"
MIN_QUANTITY = 2
MAX_QUANTITY = 2
RESPAWN_ONCE_DEAD = false

[node name="CrabSpawner2" parent="YSortTileMap" index="18" instance=ExtResource( 6 )]
position = Vector2( -7, -118 )
SPAWN_NPC = "res://Enemies/Crab.tscn"
MIN_QUANTITY = 2
MAX_QUANTITY = 2
RESPAWN_ONCE_DEAD = false

[node name="IceChestDoor" parent="YSortTileMap" index="19" instance=ExtResource( 3 )]
position = Vector2( -68, 4 )
STARTING_STATE = 1

[node name="IceGhostSpawner" parent="YSortTileMap" index="20" instance=ExtResource( 6 )]
position = Vector2( -61, 46 )
SPAWN_NPC = "res://Enemies/Ghost.tscn"
MIN_QUANTITY = 12
MAX_QUANTITY = 12
RESPAWN_ONCE_DEAD = false
DEFEATABLE = true

[node name="IceChest" parent="YSortTileMap" index="21" instance=ExtResource( 4 )]
position = Vector2( -20, 23 )
CONTENTS = [ "4,4" ]
LOCKED_MESSAGE = "Defeat the ghosts to access your tressure!"
UNLOCK_WITH_KEY = false

[node name="StalkerSpawner" parent="YSortTileMap" index="22" instance=ExtResource( 6 )]
position = Vector2( -16, -230 )
SPAWN_NPC = "res://Enemies/Stalker.tscn"
MIN_QUANTITY = 10
MAX_QUANTITY = 10
RESPAWN_ONCE_DEAD = false

[node name="StalkerSpawner2" parent="YSortTileMap" index="23" instance=ExtResource( 6 )]
position = Vector2( 76, -231 )
SPAWN_NPC = "res://Enemies/Stalker.tscn"
MIN_QUANTITY = 10
MAX_QUANTITY = 10
RESPAWN_ONCE_DEAD = false

[node name="BatSpawner" parent="YSortTileMap" index="24" instance=ExtResource( 6 )]
position = Vector2( 8, -194 )
SPAWN_NPC = "res://Enemies/Bat.tscn"
MIN_QUANTITY = 5
RESPAWN_ONCE_DEAD = false

[node name="BatSpawner2" parent="YSortTileMap" index="25" instance=ExtResource( 6 )]
position = Vector2( 60, -192 )
SPAWN_NPC = "res://Enemies/Bat.tscn"
MIN_QUANTITY = 5
RESPAWN_ONCE_DEAD = false

[node name="AirAmulet" parent="YSortTileMap" index="26" instance=ExtResource( 9 )]
position = Vector2( 32, -306 )

[node name="SpawnPoint" parent="." index="2"]
position = Vector2( 15, 20 )

[node name="LevelPortal" parent="." index="4" instance=ExtResource( 8 )]
position = Vector2( 6, 11 )
next_level_path = "res://Levels/Overworld.tscn"
STAIRS_UP = true
[connection signal="one_defeated" from="." to="." method="_on_AirDungeon_one_defeated"]
[connection signal="defeated" from="YSortTileMap/IceGhostSpawner" to="." method="_on_IceGhostSpawner_defeated"]
